--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -19,7 +19,7 @@
                  mc:Ignorable="d" HorizontalScrollBar="False"
                  LoadingText="{Binding LoadingText}"
                  Loaded="SettingsOnLoaded"
-                 d:DesignHeight="450" d:DesignWidth="800">
+                 d:DesignHeight="600" d:DesignWidth="800">
     <UserControl.DataContext>
         <models:SettingsViewModel />
     </UserControl.DataContext>
@@ -67,7 +67,7 @@
                     <Button Style="{StaticResource OpenSkyButtonStyle}" Grid.Row="2" Grid.Column="2" Margin="10,5,0,5" Command="{Binding ChangePasswordCommand}">Change Password</Button>
                 </Grid>
             </GroupBox>
-            <GroupBox Grid.Column="1">
+            <GroupBox Grid.Column="1" IsEnabled="{Binding UserSession.IsUserLoggedIn}">
                 <GroupBox.Header>
                     <TextBlock FontWeight="DemiBold">Linked Accounts and Keys</TextBlock>
                 </GroupBox.Header>
@@ -110,7 +110,7 @@
                 <ComboBox Grid.Column="1" Grid.Row="1" MinWidth="150" Margin="10,5,0,5" ItemsSource="{Binding FuelUnits}" SelectedItem="{Binding FuelUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
         </GroupBox>
-        <GroupBox>
+        <GroupBox IsEnabled="{Binding UserSession.IsUserLoggedIn}">
             <GroupBox.Header>
                 <TextBlock FontWeight="DemiBold">Local Airport Package File</TextBlock>
             </GroupBox.Header>
