--- a/OpenSky.Client/Views/LoginNotification.xaml
+++ b/OpenSky.Client/Views/LoginNotification.xaml
@@ -55,7 +55,7 @@
                 </Image>
                 <Image Grid.Row="0" Grid.Column="0" Width="100" Height="100" Source="{StaticResource OpenskyLogoPlaneAndTrail}" />
             </Grid>
-            <TextBlock TextWrapping="Wrap" MaxWidth="200" TextAlignment="Justify">The OpenSky airline management game client
+            <TextBlock TextWrapping="Wrap" MaxWidth="200" TextAlignment="Center">The OpenSky airline management game client
             requires you to login with your OpenSky account
             before your can track your flights.</TextBlock>
             <Button Style="{StaticResource OpenSkyButtonStyle}" HorizontalAlignment="Center" Margin="0,10,0,0" Command="{Binding LoginCommand}">Login to OpenSky</Button>
