--- a/OpenSky.Client/Views/LoginNotification.xaml
+++ b/OpenSky.Client/Views/LoginNotification.xaml
@@ -57,7 +57,7 @@
             </Grid>
             <TextBlock TextWrapping="Wrap" MaxWidth="200" TextAlignment="Center">The OpenSky airline management game client
             requires you to login with your OpenSky account
-            before your can track your flights.</TextBlock>
+            before you can track your flights.</TextBlock>
             <Button Style="{StaticResource OpenSkyButtonStyle}" HorizontalAlignment="Center" Margin="0,10,0,0" Command="{Binding LoginCommand}">Login to OpenSky</Button>
         </StackPanel>
     </Grid>
