--- a/OpenSky.Client/Pages/MyFleet.xaml
+++ b/OpenSky.Client/Pages/MyFleet.xaml
@@ -19,6 +19,7 @@
                       xmlns:openSkyApi="clr-namespace:OpenSkyApi"
                       xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
                       xmlns:tools="clr-namespace:OpenSky.Client.Tools"
+                      xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                       mc:Ignorable="d" 
                       HorizontalScrollBar="False"
                       LoadingText="{Binding LoadingText}"
@@ -30,6 +31,9 @@
     <UserControl.InputBindings>
         <KeyBinding Key="F5" Command="{Binding RefreshFleetCommand}" />
     </UserControl.InputBindings>
+    <UserControl.Resources>
+        <converters:VisibilityInverterConverter x:Key="VisibilityInverterConverter" />
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -97,13 +101,14 @@
                     <Button Padding="0" MinHeight="20" MaxHeight="20" Margin="5,0,0,0" Command="{Binding CancelEditAircraftCommand}">✖</Button>
                 </StackPanel>
             </GroupBox.Header>
-            <Grid>
+            <Grid Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -111,24 +116,29 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Margin="0,0,5,0">Name</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Margin="0,0,5,0">For sale?</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Margin="0,0,5,0">Purchase price</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Margin="0,0,5,0">For rent?</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Margin="0,0,5,0">Rental price / h</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Margin="0,0,5,0">Variant</TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Margin="0,15,5,0">For sale?</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Margin="0,0,5,0">Purchase price</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Margin="0,0,5,0">For rent?</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" Margin="0,0,5,0">Rental price / h</TextBlock>
 
                 <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding EditedAircraftName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="Name of the aircraft" ui:ControlHelper.PlaceholderForeground="#666" />
-                <CheckBox Grid.Column="1" Grid.Row="1" IsChecked="{Binding EditedAircraftForPurchase, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Put this aircraft up for sale</CheckBox>
-                <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding EditedAircraftPurchasePrice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="Purchase price" ui:ControlHelper.PlaceholderForeground="#666" IsEnabled="{Binding EditedAircraftForPurchase, Mode=OneWay}" />
-                <CheckBox Grid.Column="1" Grid.Row="3" IsChecked="{Binding EditedAircraftForRent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Allow other pilots to rent this aircraft</CheckBox>
-                <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding EditedAircraftRentPrice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="Rental price" ui:ControlHelper.PlaceholderForeground="#666" IsEnabled="{Binding EditedAircraftForRent, Mode=OneWay}" />
+                <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Visibility="{Binding EditAircraftVariantsVisibility, Converter={StaticResource VisibilityInverterConverter}}" Margin="0,5,0,5">No variants</TextBlock>
+                <ComboBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" ItemsSource="{Binding EditAircraftVariants}" SelectedItem="{Binding SelectedEditVariant, Mode=TwoWay}" Visibility="{Binding EditAircraftVariantsVisibility}" />
 
-                <Grid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2">
+                <CheckBox Grid.Column="1" Grid.Row="2" Margin="0,15,0,0" IsChecked="{Binding EditedAircraftForPurchase, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Put this aircraft up for sale</CheckBox>
+                <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding EditedAircraftPurchasePrice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="Purchase price" ui:ControlHelper.PlaceholderForeground="#666" IsEnabled="{Binding EditedAircraftForPurchase, Mode=OneWay}" />
+                <CheckBox Grid.Column="1" Grid.Row="4" IsChecked="{Binding EditedAircraftForRent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Allow other pilots to rent this aircraft</CheckBox>
+                <TextBox Grid.Column="1" Grid.Row="5" Text="{Binding EditedAircraftRentPrice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="Rental price" ui:ControlHelper.PlaceholderForeground="#666" IsEnabled="{Binding EditedAircraftForRent, Mode=OneWay}" />
+
+                <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" HorizontalAlignment="Stretch" Margin="5,10,5,0" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SaveEditedAircraftCommand}">Save aircraft</Button>
-                    <Button Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,10,5,0" Command="{Binding CancelEditAircraftCommand}">Cancel</Button>
+                    <Button Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,10,5,0" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SaveEditedAircraftCommand}">Save aircraft</Button>
+                    <Button Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,10,0,0" Command="{Binding CancelEditAircraftCommand}">Cancel</Button>
                 </Grid>
             </Grid>
         </GroupBox>
