--- a/OpenSky.Client/Pages/Welcome.xaml
+++ b/OpenSky.Client/Pages/Welcome.xaml
@@ -18,6 +18,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="15">
-            <TextBlock FontSize="18">Welcome to the Alpha version of the OpenSky client!</TextBlock>
+            <TextBlock FontSize="18">Welcome to the Alpha2 version of the OpenSky client!</TextBlock>
     </Grid>
 </controls:OpenSkyPage>
